// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlatRadioButton /> should render normally 1`] = `
<ButtonWithTooltip
  className="ocm-flat-radio-button"
  onClick={[Function]}
  variant="tertiary"
>
  <Title
    headingLevel="h4"
    size="lg"
  >
    hello
  </Title>
  test
</ButtonWithTooltip>
`;

exports[`<FlatRadioButton /> should render when disabled 1`] = `
<ButtonWithTooltip
  className="ocm-flat-radio-button"
  disableReason="out of cheese"
  onClick={[Function]}
  variant="tertiary"
>
  <Title
    headingLevel="h4"
    size="lg"
  >
    hello
  </Title>
  test
</ButtonWithTooltip>
`;

exports[`<FlatRadioButton /> should render when selected 1`] = `
<ButtonWithTooltip
  className="ocm-flat-radio-button selected"
  onClick={[Function]}
  variant="tertiary"
>
  <Title
    headingLevel="h4"
    size="lg"
  >
    hello
  </Title>
  test
</ButtonWithTooltip>
`;

exports[`<FlatRadioButton /> should render with tooltip 1`] = `
<ButtonWithTooltip
  className="ocm-flat-radio-button"
  onClick={[Function]}
  tooltip="hello world!"
  variant="tertiary"
>
  <Title
    headingLevel="h4"
    size="lg"
  >
    hello
  </Title>
  test
</ButtonWithTooltip>
`;
